<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.MovieDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:expanded="false"
        tools:expanded="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:scrimAnimationDuration="@integer/material_motion_duration_long_2"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/ivMovieHeaderImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_movie_description"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.6" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMovieDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nesScrollMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMovieTranslatedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="Aterriza como puedas" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/movie_title_headline"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/tvMovieOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Airplane" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/movie_release_date_headline"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/tvMovieReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="12/06/1984" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/movie_average_rate_headline"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/tvMovieVoteAverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="8.5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/movie_genre_names_headline"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/tvMovieGenresNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="comedia, humor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/movie_overview_headline"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:id="@+id/tvMovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Es una película de humor donde un avión sufre un secuestro y un pasajero tiene que pilotar el avión de una forma poco convencional. Durante el viaje sucederán  situaciones la mar de tronchantes" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbMovieDetails"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>